# 0004_std_lib_http_client

./: CMakeLists.txt  Jenkinsfile  README.md  analyse_latencies.py  run-coverage-cicd.sh  sonar-project.properties
benchmark/clients/c/: httpc_client.c  libcurl_client.c
benchmark/clients/cpp/: boost_client.cpp  httpcpp_client.cpp
benchmark/clients/python/: httppy_client.py  requests_client.py
benchmark/server/: main.cpp
results/boost_suggested_server/: benchmark.txt
results/low_level_march_on/: benchmark.txt  hyperfine_results_latency_small_small_tcp.md  hyperfine_results_latency_small_small_unix.md  hyperfine_results_mixed_balanced_random_tcp.md  hyperfine_results_mixed_balanced_random_unix.md  hyperfine_results_mixed_client_random_tcp.md  hyperfine_results_mixed_client_random_unix.md  hyperfine_results_mixed_server_random_tcp.md  hyperfine_results_mixed_server_random_unix.md  hyperfine_results_throughput_balanced_large_tcp.md  hyperfine_results_throughput_balanced_large_unix.md  hyperfine_results_throughput_downlink_heavy_tcp.md  hyperfine_results_throughput_downlink_heavy_unix.md  hyperfine_results_throughput_uplink_heavy_tcp.md  hyperfine_results_throughput_uplink_heavy_unix.md  latencies.txt
src/rust/: Cargo.toml
