[package]
name = "rust"
version = "0.1.0"
edition = "2024"
description = "A standard library HTTP client implementation"
license = "MIT"
repository = "https://gitlab.cicd.local:10300/Articles/0004_std_lib_http_client"
authors = ["Warren Jitsing <your.email@gmail.com>"]

[lib]
name = "httprust"
path = "src/lib.rs"

[dependencies]
libc = "1.0.0-alpha.1"
reqwest = { version = "0.12.23", features = ["blocking"]}

[[bin]]
name = "httprust_client"
path = "src/bin/httprust_client.rs"

[[bin]]
name = "reqwest_client"
path = "src/bin/reqwest_client.rs"